# raftpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml
docs/: cmake_integration.md  datadriven_design.md  implementation_plan.md  project_summary.md  test_data_examples.md  usage_examples.md
include/raftpp/: ack_indexer.h  conf_changer.h  conf_restore.h  config.h  error.h  joint.h  joint_conf.h  log_unstable.h  logging.h  majority.h  majority_conf.h  primitives.h  progress.h  quorum.h  raft.h  raft_config.h  raft_core.h  raft_log.h  raw_node.h  read_only.h  readonly.h  status.h  storage.h  tracker.h  tracker_conf.h  unstable_log.h  util.h
include/raftpp/datadriven/: datadriven.h  exceptions.h  line_parser.h  test_data.h  test_reader.h
lib/: CMakeLists.txt  ack_indexer.cc  conf_changer.cc  conf_restore.cc  config.cc  error.cc  joint.cc  joint_conf.cc  lib.cc  log_unstable.cc  logging.cc  majority.cc  majority_conf.cc  progress.cc  progress_tracker.cc  quorum.cc  raft.cc  raft_config.cc  raft_core.cc  raft_log.cc  raw_node.cc  read_only.cc  readonly.cc  storage.cc  tracker.cc  tracker_conf.cc  unstable_log.cc  util.cc
lib/datadriven/: CMakeLists.txt  datadriven.cc  exceptions.cc  line_parser.cc  test_data.cc  test_reader.cc
proto/: CMakeLists.txt  raftpp.proto
tests/: CMakeLists.txt  conf_change_data_test.cc  data_driven_test.cc  data_driven_test.h  datadriven_test.cc  json_test.cc  log_unstable_test.cc  progress_test.cc  test_main.cc  tracker_test.cc
tests/data/: CMakeLists.txt
tests/datadriven/: CMakeLists.txt  datadriven.cc  datadriven.h  exceptions.cc  exceptions.h  line_parser.cc  line_parser.h  test_data.cc  test_data.h  test_reader.cc  test_reader.h
tests/testdata/math_operations/: basic_arithmetic.txt  fibonacci.txt
tests/testdata/raft_algorithm/: leader_election.txt  log_replication.txt
tests/testdata/string_operations/: concat.txt
